--- a/apispring-frontend/src/app/components/panel-product/panel-product.html
+++ b/apispring-frontend/src/app/components/panel-product/panel-product.html
@@ -16,6 +16,7 @@
         <td>{{ product.name }}</td>
         <td>{{ product.description }}</td>
         <td>${{ product.price | number:'1.2-2' }}</td>
+        <td>{{ product.category?.name ?? 'N/A' }}</td>
         <td class="action-cell">
           <button (click)="openEditModal(product)" class="btn-edit"><i class="fa-solid fa-pencil"></i> Editar</button>
           <button (click)="deleteProduct(product.id)" class="btn-delete"><i class="fa-solid fa-trash"></i> Eliminar</button>
